Implement delete UDP ECHO flow
