# goa/app/media_types.go
@@ -101,13 +101,13 @@ func (mt *Gtpsession) Validate() (err error) {
 //
 // Identifier: application/vnd.udpechoflow+json; view=default
 type Udpechoflow struct {
-	UDPEchoFlowArg *UDPEchoFlowPayload `form:"UdpEchoFlowArg,omitempty" json:"UdpEchoFlowArg,omitempty" xml:"UdpEchoFlowArg,omitempty"`
+	Param *UDPEchoFlowPayload `form:"param,omitempty" json:"param,omitempty" xml:"param,omitempty"`
 }
 
 // Validate validates the Udpechoflow media type instance.
 func (mt *Udpechoflow) Validate() (err error) {
-	if mt.UDPEchoFlowArg != nil {
-		if err2 := mt.UDPEchoFlowArg.Validate(); err2 != nil {
+	if mt.Param != nil {
+		if err2 := mt.Param.Validate(); err2 != nil {
 			err = goa.MergeErrors(err, err2)
 		}
 	}
